# gangtise-python

./: .env.example  .gitignore  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md
docs/superpowers/plans/: 2026-05-27-gangtise-openapi-python.md
docs/superpowers/specs/: 2026-05-27-gangtise-openapi-python-design.md
sample/: API_PARAMETERS.md  README.md
sample/async/: _utils.py  ai_earnings_review.py  ai_earnings_review_check.py  ai_hot_topic.py  ai_investment_logic.py  ai_knowledge_batch.py  ai_knowledge_resource_download.py  ai_management_discuss_announcement.py  ai_management_discuss_earnings_call.py  ai_one_pager.py  ai_peer_comparison.py  ai_research_outline.py  ai_security_clue_list.py  ai_stock_summary_list.py  ai_theme_tracking.py  ai_viewpoint_debate.py  ai_viewpoint_debate_check.py  alternative_concept_info.py  alternative_concept_securities.py  alternative_edb_data.py  alternative_edb_search.py  auth_login.py  auth_status.py  fundamental_balance_sheet.py  fundamental_balance_sheet_hk.py  fundamental_balance_sheet_us.py  fundamental_cash_flow.py  fundamental_cash_flow_hk.py  fundamental_cash_flow_quarterly.py  fundamental_cash_flow_us.py  fundamental_earning_forecast.py  fundamental_income_statement.py  fundamental_income_statement_hk.py  fundamental_income_statement_quarterly.py  fundamental_income_statement_us.py  fundamental_main_business.py  fundamental_top_holders.py  fundamental_valuation_analysis.py  indicator_cross_section.py  indicator_search.py  (+60 more)
sample/sync/: ai_earnings_review.py  ai_earnings_review_check.py  ai_hot_topic.py  ai_investment_logic.py  ai_knowledge_batch.py  ai_knowledge_resource_download.py  ai_management_discuss_announcement.py  ai_management_discuss_earnings_call.py  ai_one_pager.py  ai_peer_comparison.py  ai_research_outline.py  ai_security_clue_list.py  ai_stock_summary_list.py  ai_theme_tracking.py  ai_viewpoint_debate.py  ai_viewpoint_debate_check.py  alternative_concept_info.py  alternative_concept_securities.py  alternative_edb_data.py  alternative_edb_search.py  auth_login.py  auth_status.py  fundamental_balance_sheet.py  fundamental_balance_sheet_hk.py  fundamental_balance_sheet_us.py  fundamental_cash_flow.py  fundamental_cash_flow_hk.py  fundamental_cash_flow_quarterly.py  fundamental_cash_flow_us.py  fundamental_earning_forecast.py  fundamental_income_statement.py  fundamental_income_statement_hk.py  fundamental_income_statement_quarterly.py  fundamental_income_statement_us.py  fundamental_main_business.py  fundamental_top_holders.py  fundamental_valuation_analysis.py  indicator_cross_section.py  indicator_search.py  indicator_time_series.py  (+59 more)
src/gangtise_openapi/: __init__.py  _async_content.py  _auth.py  _client.py  _config.py  _download.py  _endpoints.py  _errors.py  _facade.py  _logging.py  _normalize.py  _pagination.py  _quote_sharding.py  _title_cache.py  _transport.py  _transport_async.py
src/gangtise_openapi/_lookup/: __init__.py  announcement_categories.py  broker_orgs.py  industries.py  industry_codes.py  meeting_orgs.py  regions.py  research_areas.py  theme_ids.py
src/gangtise_openapi/domains/: __init__.py  _common.py  ai.py  alternative.py  auth.py  fundamental.py  indicator.py  insight.py  lookup.py  quote.py  reference.py  vault.py
tests/: conftest.py
tests/endpoints/: test_ai.py  test_ai_async.py  test_alternative.py  test_alternative_async.py  test_auth.py  test_auth_async.py  test_fundamental.py  test_fundamental_async.py  test_indicator.py  test_indicator_async.py  test_insight.py  test_insight_async.py  test_lookup.py  test_lookup_async.py  test_quote.py  test_quote_async.py  test_reference.py  test_reference_async.py  test_vault.py  test_vault_async.py
tests/integration/: test_live.py
tests/unit/: test_async_client.py  test_async_content.py  test_async_content_async.py  test_auth.py  test_client.py  test_common.py  test_config.py  test_date_guard_wiring.py  test_download.py  test_endpoints.py  test_errors.py  test_facade.py  test_facade_async.py  test_logging.py  test_lookup.py  test_normalize.py  test_pagination.py  test_pagination_async.py  test_quote_sharding.py  test_title_cache.py  test_transport.py  test_transport_async.py
